frontend/test/should_pass/exectype_SetmapAddUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({x.add(y)} && {u.add(v,w)});
	}
}