frontend/test/should_fail/exectype_SetmapAdd7.grg
using exectype;

rule r
{
	modify  {
		exec(u:map<AA,HH> =map<AA,HH> && v:A=varia && w:H=vario && {u.add(v,w)});
	}
}